# CP_Header_Collection

./: .gitignore  CMakeLists.txt  README.md
cpai/: README.md  cpai.h
cplibrary/: README.md  cpl.h
cplterminal/: cplt.h
cpstd/: CMakeLists.txt  cparena.h  cpbase.h  cpbitarr.h  cphash.h  cplist.h  cpmath.h  cpqueue.h  cprng.h  cpstdConfig.cmake.in  cpvec.h  how_to_use.txt
shaders/frag/2D/: texture.frag  texture_w.frag
shaders/vert/2D/: texture.vert  texture_w.vert
src/: ai.c  bird_anim.h  bird_gl.c  pong_gl.c  pong_terminal.c  snake_terminal.c  test.c
